# dns-updater

./: .env.template  .gitignore  Cargo.toml  LICENSE  README.md  build.sh  output.json  test.sh
debian/: dns-update.service  postinst  postrm  prerm
src/: main.rs
src/config/: request.rs
