[package]
name = "dns-update"
version = "0.1.0"
edition = "2021"
authors = ["Doan Manh Thang <thangdm.it@gmail.com>"]
license = "CC BY-NC-ND 4.0"
description = "An automated updater for DNS record optimized for dynamic Public IP"

[dependencies]
dotenv = "0.15.0"
http = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tokio = { version = "1", features = ["full"] }
public-ip = "0.2.2"

[profile.release]
opt-level = 3

[package.metadata.deb]
maintainer = "Doan Manh Thang <thangdm.it@gmail.com>"
copyright = "Doan Manh Thang <thangdm.it@gmail.com>"
depends = "openssl, systemd, ca-certificates"
maintainer-scripts="debian"
license-file = ["LICENSE", "4"]
assets = [
    ["target/release/dns-update", "usr/bin/", "755"],
    [".env", "/etc/dns-update/", "644"],
    ["debian/dns-update.service", "/etc/systemd/system/dns-update.service", "644"],
]